--- a/css/home.css
+++ b/css/home.css
@@ -366,42 +366,45 @@
   position: absolute;
 }
 .line-icon.warn {
-  width: 50px;
-  height: 50px;
-  background: #fff;
+  width: 36px;
+  height: 36px;
+  background: url(../images/home/red_dot.png) no-repeat;
   z-index: 5;
-  -webkit-animation: scaleLine 10s  infinite;
-  -moz-animation: scaleLine 10s infinite;
-  animation: scaleLine 10s  infinite;
+  -webkit-animation: scaleLine 3s  infinite;
+  -moz-animation: scaleLine 3s infinite;
+  animation: scaleLine 3s  infinite;
 }
 @-webkit-keyframes scaleLine {
-  from {
-    transform: scale(1);
-    opacity: 1;
+  0% {
+    -webkit-transform: scale(1);
   }
-  to {
-    transform: scale(0.2);
-    opacity: .2;
+  50% {
+    -webkit-transform: scale(0.6);
+  }
+  100% {
+    -webkit-transform: scale(1);
   }
 }
 @-moz-keyframes scaleLine {
-  from {
+  0% {
     -moz-transform: scale(1);
-    opacity: 1;
   }
-  to {
-    -moz-transform: scale(0.2);
-    opacity: .2;
+  50% {
+    -moz-transform: scale(0.6);
+  }
+  100% {
+    -moz-transform: scale(1);
   }
 }
 @keyframes scaleLine {
-  from {
-    -webkit-transform: scale(1);
-    opacity: 1;
+  0% {
+    transform: scale(1);
   }
-  to {
-    -webkit-transform: scale(0.2);
-    opacity: .2;
+  50% {
+    transform: scale(0.6);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 .line-icon.no-update {
@@ -661,7 +664,7 @@
 /* 旋转模块  end*/
 /* 中间底部 */
 .bottom-box {
-  width: 1076px;
+  width: 1056px;
   height: 206px;
   margin: -65px 0 0 -40px;
   flex-direction: row;
@@ -675,6 +678,7 @@
   position: relative;
   top: 50px;
   visibility: visible;
+  cursor: pointer;
 }
 .bottom-box .prevButton.hidden,
 .bottom-box .nextButton.hidden {
@@ -693,7 +697,7 @@
   background: url(../images/home/jt_right_on.png) no-repeat;
 }
 .center-bottom {
-  width: 990px;
+  width: 970px;
   height: 100%;
   overflow: hidden;
 }
